closes #75